<resources>
    <string name="app_name" translatable="false">Math master</string>

    // Main Menu
    <string name="Login" translatable="false">Login</string>
    <string name="Practice" translatable="false">Practice</string>
    <string name="Challenge" translatable="false">Challenge</string>
    <string name="Learn" translatable="false">Learn</string>
    <string name="Statistics" translatable="false">Statistics</string>
    <string name="Tools" translatable="false">Tools</string>

    <string name="Back" translatable="false">Back</string>
    <string name="Exit" translatable="false">Exit</string>

    // Keyboard and inputs
    <string name="Enter" translatable="false">Enter</string>
    <string name="Delete" translatable="false">Del</string>
    <string name="EnterNumber" translatable="false">Enter number</string>

    // Learn


    // Practice
    <string name="Multiply" translatable="false">Multiply</string>
    <string name="Divide" translatable="false">Divide</string>
    <string name="AddSubtract" translatable="false">Add/Subtract</string>
    <string name="Mixed" translatable="false">Mixed</string>

    <string name="TotalPractices" translatable="false">Total practices:</string>
    <string name="AverageTimeOfPractice" translatable="false">Average time of practice:</string>
    <string name="MostPracticed" translatable="false">Most practiced:</string>

    // Challenge
    <string name="Easy" translatable="false">Easy</string>
    <string name="Medium" translatable="false">Medium</string>
    <string name="Hard" translatable="false">Hard</string>
    <string name="Master" translatable="false">Master</string>

    <string name="FinishedEasy" translatable="false">Total finished easy:</string>
    <string name="FinishedMedium" translatable="false">Total finished medium:</string>
    <string name="FinishedHard" translatable="false">Total finished hard:</string>
    <string name="FinishedMaster" translatable="false">Total finished master:</string>

    // Tools
    <string name="FunctionChart" translatable="false">Function chart</string>
    <string name="MatrixCalculator" translatable="false">Matrix calculator</string>
    <string name="AdvancedCalculator" translatable="false">Advanced calculator</string>
    <string name="UnknownsCalculator" translatable="false">Unknowns calculator</string>
    <string name="DerivativeCalculator" translatable="false">Derivative calculator</string>

    // Advance calculator
    <string name="FirstCalc" translatable="false">1st</string>
    <string name="SecondCalc" translatable="false">2nd</string>
    <string name="DegreeCalc" translatable="false">deg</string>
    <string name="RadiansCalc" translatable="false">rad</string>
    <string name="Sin" translatable="false">sin</string>
    <string name="Cos" translatable="false">cos</string>
    <string name="Tan" translatable="false">tan</string>
    <string name="ASin" translatable="false">arcsin</string>
    <string name="ACos" translatable="false">arccos</string>
    <string name="ATan" translatable="false">arctan</string>

    <string name="PowerTo" translatable="false">^</string>
    <string name="Logaritm" translatable="false">lg</string>
    <string name="NaturalLogaritm" translatable="false">ln</string>

    <string name="Root" translatable="false">√x</string>
    <string name="Factorial" translatable="false">x!</string>
    <string name="Fraction" translatable="false">⅟</string>
    <string name="PInumber" translatable="false">π</string>

    <string name="Clear" translatable="false">C</string>
    <string name="Error" translatable="false">ERROR</string>
    <string name="AC" translatable="false">AC</string>

    // Matrix calculator
    <string name="RowPlus" translatable="false">Row+</string>
    <string name="RowMinus" translatable="false">Row-</string>
    <string name="ColPlus" translatable="false">Col+</string>
    <string name="ColMinus" translatable="false">Col-</string>
    <string name="MultiplyMatrix" translatable="false">Multiply</string>
    <string name="AddMatrix" translatable="false">Add</string>
    <string name="SubtractMatrix" translatable="false">Subtract</string>
    <string name="InverseMatrix" translatable="false">Inverse</string>
    <string name="TransposeMatrix" translatable="false">Transpose</string>
    <string name="ComplementMatrix" translatable="false">Complements</string>
    <string name="DeterminantRankMatrix" translatable="false">Det/Rank</string>
    <string name="OtherMatrix" translatable="false">Other</string>
    <string name="RankMatrix" translatable="false">Rank</string>
    <string name="PowerMatrix" translatable="false">Power</string>
    <string name="PowerTo2" translatable="false">Power to 2</string>
    <string name="PowerTo3" translatable="false">Power to 3</string>
    <string name="Undo" translatable="false">Undo</string>

    // Function chart
    <string name="Information" translatable="false">Information</string>
    <string name="HorizontalAsymptote" translatable="false">Horizontal asymptote:</string>
    <string name="HorizontalAsymptotes" translatable="false">Horizontal asymptotes:</string>
    <string name="VerticalAsymptotes" translatable="false">Vertical asymptotes:</string>
    <string name="VerticalAsymptote" translatable="false">Vertical asymptote:</string>
    <string name="ZeroPlaces" translatable="false">Zero places:</string>
    <string name="ZeroPlace" translatable="false">Zero place:</string>
    <string name="None" translatable="false">None</string>

    // Unknowns calculator
    <string name="FirstEquation" translatable="false">First equation:</string>
    <string name="SecondEquation" translatable="false">Second equation:</string>
    <string name="ThirdEquation" translatable="false">Third equation:</string>
    <string name="EqAdd" translatable="false">EQ+</string>
    <string name="EqSubtract" translatable="false">EQ-</string>

    // Derivative calculator
    <string name="DerivativeResult" translatable="false">Derivative:</string>
    <string name="DerivativeInput" translatable="false">Equation:</string>

    // Statistics
    <string name="StatisticsOverview" translatable="false">Statistics Overview</string>
    <string name="TotalQuestions" translatable="false">Total questions</string>
    <string name="CorrectAnswers" translatable="false">Correct answers:</string>
    <string name="IncorrectAnswers" translatable="false">Incorrect answers:</string>
    <string name="Answers" translatable="false">Answers</string>

</resources>