<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MatrixResultMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="3">

        <Button
            android:id="@+id/MultiplyMatrix"
            android:text="@string/MultiplyMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/AddMatrix"
            android:text="@string/AddMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/SubtractMatrix"
            android:text="@string/SubtractMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/TransposeMatrix"
            android:text="@string/TransposeMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/RankMatrix"
            android:text="@string/RankMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/UndoMatrix"
            android:text="@string/Undo"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/PowerMatrix"
            android:text="@string/PowerMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/ComplementMatrix"
            android:text="@string/ComplementMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/InverseMatrix"
            android:text="@string/InverseMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/DetRankMatrix"
            android:text="@string/DeterminantRankMatrix"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/PowerTo2"
            android:text="@string/PowerTo2"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/PowerTo3"
            android:text="@string/PowerTo3"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/UndoPower"
            android:text="@string/Undo"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/BackPower"
            android:text="@string/Back"
            android:textColor="@color/White"
            android:background="@drawable/menubutton_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:visibility="gone"/>

</GridLayout>