<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.4">

        <Button
            android:id="@+id/MenuMultiply"
            style="@style/MenuButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:text="@string/MultiplyMatrix" />

        <Button
            android:id="@+id/MenuAdd"
            style="@style/MenuButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:layout_marginTop="5dp"
            android:text="@string/AddMatrix" />

        <Button
            android:id="@+id/MenuSubtract"
            style="@style/MenuButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:layout_marginTop="5dp"
            android:text="@string/SubtractMatrix" />

        <Button
            android:id="@+id/MenuOther"
            style="@style/MenuButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:layout_marginTop="5dp"
            android:text="@string/OtherMatrix" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>