<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/ChallengeStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.83"
        app:cardCornerRadius="10dp">

        <LinearLayout
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Card Title -->
            <TextView
                android:id="@+id/ChallengeStatisticsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/StatisticsOverview"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Statistic 1: Total finished easy -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedEasy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FinishedEasy"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedEasyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Statistic 2: Total finished medium -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FinishedMedium"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedMediumValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Statistic 3: Total finished hard -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedHard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FinishedHard"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedHardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Statistic 4: Total finished master -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedMaster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FinishedMaster"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/ChallengeStatisticsTotalFinishedMasterValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/Easy"
        style="@style/MenuButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/Easy"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChallengeStatistics"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/Medium"
        style="@style/MenuButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toEndOf="@+id/Easy"
        app:layout_constraintTop_toBottomOf="@+id/ChallengeStatistics"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/Hard"
        style="@style/MenuButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/Hard"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Easy"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/Master"
        style="@style/MenuButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Master"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/Hard"
        app:layout_constraintTop_toBottomOf="@+id/Medium"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/Back"
        style="@style/MenuButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>