<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/MultiplyEndStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.83">

        <LinearLayout
            style="@style/MenuButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Card Title -->
            <TextView
                android:id="@+id/MultiplyStatisticsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/StatisticsOverview"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Statistic 1: Total questions -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/MultiplyStatisticsTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TotalQuestions"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/MultiplyStatisticsTotalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Statistic 2: Correct Answers -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/MultiplyStatisticsCorrect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CorrectAnswers"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/MultiplyStatisticsCorrectValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Statistic 3: Incorrect Answers -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="4dp">

                <TextView
                    android:id="@+id/MultiplyStatisticsIncorrect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/IncorrectAnswers"
                    android:textColor="@color/White" />

                <TextView
                    android:id="@+id/MultiplyStatisticsIncorrectValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/Answers"
                android:textColor="@color/White"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:overScrollMode="never">

                <LinearLayout
                    android:id="@+id/ScrollBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>